--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -6,7 +6,7 @@
 #    By: jmabel <jmabel@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/06/14 16:43:04 by jmabel            #+#    #+#              #
-#    Updated: 2022/07/03 21:38:55 by jmabel           ###   ########.fr        #
+#    Updated: 2022/07/04 17:25:31 by jmabel           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -21,8 +21,10 @@ RM			=	rm -rf
 SRCS		=	philo_bonus.c\
 				parser_init_bonus.c\
 				launch_bonus.c\
-				philo_processes.c\
-				semaphore.c\
+				philo_processes_bonus.c\
+				stop_simulation_bonus.c\
+				semaphore_bonus.c\
+				file_semaphore_bonus.c\
 				utils_bonus.c\
 				error_bonus.c
 
